nowrap strange bug fixed;

--- a/reactapp/src/components/common/TagList.css
+++ b/reactapp/src/components/common/TagList.css
@@ -6,5 +6,5 @@
 }
 
 .tag-list--nowrap {
-    white-space: pre;
+/*    white-space: pre; */
 }
